--- a/docs/data-aggregation/connector-ui.mdx
+++ b/docs/data-aggregation/connector-ui.mdx
@@ -3,3 +3,87 @@ title: Connector UI
 description:
   How to use the connector Ui
 ---
+
+# Connector UI
+
+## Required Information
+
+In order to use Zūm Rails Aggregation you will need to have a valid CustomerId, this information will be provided within your onboarding, if not you can easily grab it from Zūm Portal.
+
+A customer Id for testing looks like this: `a3510efb-5edb-4972-96be-a5a91ddfa56a`
+
+## Configuration
+
+To build your Connector URL, you have to select a few parameters you might want to use.
+
+
+### Basic configuration
+
+Parameter | Description | Default value | Required
+-------------- | -------------- | ----- | ----
+**customerid** | Your CustomerId | - | yes
+
+
+The base url for Connector is `https://connector.aggregation.zumrails.com/?customerid=a3510efb-5edb-4972-96be-a5a91ddfa56a`.
+
+### Configure the user experience
+
+Parameter | Description | Default value | Required
+-------------- | -------------- | ----- | ----
+consent | Display the consent page, this page explains to the end user what information will be extracted, as well let the end user agree with the terms & conditions | true | false
+accountselector | Display a page to select the preferred account, usually used for EFT payment initiation.  | true | false
+testinstitution | Display Zūm Rails test institution, used while you are testing | false | false
+
+### Configure the user interface
+
+Parameter | Description | Default value | Required
+-------------- | -------------- | ----- | ----
+backbutton | Display the back button on the left hand top corner | false | false
+closebutton | Display the close button on the right hand top corner | false | false
+logo | Display the logo on the top of the screen | true | false
+buttonbgcolor | The navigation buttons background color | #000000 | false
+buttontextcolor | The navigation buttons text color | #FFFFFF | false
+logourl | Your logo url to be used on the UI, if not informed, Zūm Rails logo is the default one | - | false
+tecUrl | Your terms & conditions URL (consent page). When clicked a new tab will be opened | - | false
+institutionsearch | Display the Institution Search box | true | false
+finishRredirecturl | An URL to redirect the page after the connection is completed | - | false
+
+### Configure the data to extract
+
+Parameter | Description | Default value | Required
+-------------- | -------------- | ----- | ----
+gettransactions | If you want to extract transactions | true | false
+getstatements | If you want to extract pdf statements | false | false
+getholderinformation | If you want to extract the account holder name and address | true | false
+datefrom | By default we extract information for the last 12 months, use this field if you want to specify another range with this format (yyyy-MM-dd) | - | false
+
+### Extra configuration
+
+Parameter | Description | Default value | Required
+-------------- | -------------- | ----- | ----
+extrafield1 | And extra field so that you can add custom information, later receive it when the connection is completed | - | false
+extrafield2 | And extra field so that you can add custom information, later receive it when the connection is completed | - | false
+
+:::info
+Any parameters that are not true/false, like urls or texts must be encoded.
+:::
+
+## Access the data
+
+After a new connection is made, the data can be available to you in different ways, listed bellow:
+
+### Access the data in Zūm Rails portal
+
+For every new connection made for an specific card, a new user will be automatically created in Zūm Rails portal, you can search it under the User page
+
+### Access the data via javascript event listener
+
+Every interaction with the UI triggers a javascript event listener that your host page can listen to. Each message has a step as described [here](#callbacks). An example of how to listen for events in javascript can be found at the right side of this page.
+
+Code block for event listener
+
+### Access the data via webhooks
+
+You can receive the information as well by webhook, to do that you have to open Zūm Rails portal, navigate to settings > webhook & api settings, then enable the aggregation events.
+
+Once a new connection is made, a webhook will be fired to the specified url. More information on how to secure webhook, can be found [here](../api-specification/webhooks):
