--- a/docs/data-aggregation/introduction.mdx
+++ b/docs/data-aggregation/introduction.mdx
@@ -3,3 +3,37 @@ title: Introduction
 description:
   Introduction to Data Aggregation.
 ---
+
+# Introduction
+
+Welcome to Zūm Rails Aggregation Documentation!
+
+This documentation provides both a high-level view of the process as well as the steps to successfully use the aggregation services.
+## Ways to integrate
+
+There are two main ways of using Zūm Rails Aggregation service:
+
+### Full API Integration
+
+This allows your application to take full control of the experience, it's recommended only for partners. In order to have access to it, please drop us a message at [support@zumrails.com](mailto:support@zumrails.com). 
+
+### Connector UI
+
+This allows you to display Zūm Rails Aggregation inside your current flow, it's the recommended way for most of our clients.
+
+There are two different ways to use Connector UI, using a javascript library to initiate it, or simply getting a public URL. 
+
+- **[The Connector SDK](./connector-sdk)**, gives you more security and flexibility to take actions based on javascript callbacks.
+
+- **[The Connector UI](./connector-ui)** it's the easiest way to use. It's a unique URL you can host as an iframe, send by e-mail or sms.
+
+## Configure
+
+```html
+<iframe 
+    src="https://connector.aggregation.zumrails.com/connector-setup" 
+    title="Setup"
+    scrolling="no"
+    style="border:0px; width:100%; height: 652px; overflow: hidden;">
+</iframe>
+```
