--- a/docs/invoice-and-subscription/tax.mdx
+++ b/docs/invoice-and-subscription/tax.mdx
@@ -15,4 +15,4 @@ Tax | Subtotal | Tax Due | Total
 13% Exclusive | $5.00 | $0.65 | $5.65 ($5.00 + $0.65)
 13% Inclusive | $5.00 | $0.65 (already included in the price) | $5.00 ($4.35 + $0.65)
 
-When determining tax amounts, ZUm Rails rounds it to the smallest currency unit (2 decimals) before summing across the entire invoice. You can add multiple tax rates to invoices/subscriptions or for checkout links.
+When determining tax amounts, Zum Rails rounds it to the smallest currency unit (2 decimals) before summing across the entire invoice. You can add multiple tax rates to invoices/subscriptions or for checkout links.
