patch - text migrate api-intro auth and users

--- a/docs/api-specification/api-introduction.mdx
+++ b/docs/api-specification/api-introduction.mdx
@@ -40,7 +40,7 @@ Field | Description
 -------------- | --------------
 statusCode | The http [status code](./errors)
 message | A message describing if the response was successful
-isError | true/false to indicate if the request was successfullly processed
+isError | true/false to indicate if the request was successfully processed
 result | The json response for your API call
 responseException | In case the isError is true, the exception indicating the problem
 
@@ -54,7 +54,7 @@ Follow these steps to quickly get started with the Zũm Rails API:
 
 Once you have access to your sandbox portal:
 
-1) Login in your sandbox portal, navigate to Settings -> Technical Information -> API Settings. Grab your api username and password
+1) Login in your sandbox portal, navigate to Settings -> Webhook & API Settings. Grab your api username and password
 
 2) Download and install the Postman app
 
