--- a/docs/api-specification/authentication.mdx
+++ b/docs/api-specification/authentication.mdx
@@ -6,6 +6,10 @@ description:
 
 # Authentication
 
+All API requests are using the Bearer Token Authorization. A Bearer Token will last up to an hour from the time it is generated, allowing multiple API calls to be made securely without authorizing each time.
+
+To be able to get your token access, open the Settings page in the Portal, then navigate to the section Webhook & API settings. You will need the username and password.
+
 ```json
 > Payload example:
 {
@@ -22,6 +26,11 @@ description:
         "Token": "eyJhbG...tOTuvNvJc",
         "CustomerId": "3012...042f2",
         "CompanyName": "Test Company Inc."
+        "CustomerType": "Customer",
+        "Username": "b022aced-fae9-414f-853e-959fdf90d8f1",
+        "IsTermsOfUseAccepted": false,
+        "IsTwoFactorAuthenticationEnabled": false,
+        "LoginType": "EmailPassword"
     }
 }
 ```
@@ -29,10 +38,6 @@ description:
 `Method: POST`
 
 `Endpoint: {{env}}/api/authorize`
-
-All API requests are using the Bearer Token Authorization. A Bearer Token will last up to an hour from the time it is generated, allowing multiple API calls to be made securely without authorizing each time.
-
-To be able to get your token access, open the Settings page in the Portal, then navigate to the section API settings. You will need the username and password.
 
 **Input parameters**
 
@@ -49,9 +54,12 @@ Role | The role this login belongs to
 Token | The authorization token that needs to be used in any other API request
 CustomerId | The customer id this login belongs to
 CompanyName | The company name this login belongs to
+CustomerType | Type for the customer account
+Username     | Username for the login
+IsTermsOfUseAccepted | If terms of use aggrement is IsTermsOfUseAccepted
+IsTwoFactorAuthenticationEnabled | If it has two factor authentication enabled
+LoginType | LoginType for the session
 
 :::info
-
 You have to inform the Token field received in this endpoint in any other request you want to execute. Once the token expires, you have to authenticate again to be able to retrieve a new token.
-
 :::
