--- a/docs/api-specification/users.mdx
+++ b/docs/api-specification/users.mdx
@@ -9,12 +9,18 @@ description:
 At Zūm, Users represent the payee for accounts payable, or the payer for accounts receivable.
 There are 3 ways of ingesting users, API, Portal, and Zūm Connect.
 
-Zūm Rails recommends using Zūm Connect
+Zūm Rails recommends using Zūm Connect for the below reasons:
 
 - For EFT, it offers the end user the possibility to link his bank account, ensuring that the bank account information will be verified to avoid transaction failures.
 - For Credit Card and Visa Direct, it's required that we reduce your PCI scope.
 
+For more information about Zūm Connect, [click here](../ways-to-integrate/zum-connect):
+
+
 ## Creating a new user
+Use this endpoint if you want to add a new user to your account.
+For Credit Card and Visa Direct, if you want to add a user through API, please contact Zūm support.
+
 
 ```json
 > Payload example:
@@ -71,9 +77,6 @@ Zūm Rails recommends using Zūm Connect
 
 `Endpoint: {{env}}/api/user`
 
-Use this endpoint if you want to add a new user to your account.
-For Credit Card and Visa Direct, if you want to add a user through API, please contact Zūm support.
-
 **Input parameters**
 
 Parameter               | Type      | EFT (Mandatory)  | Interac (Mandatory)   | Credit Card (Mandatory)   | Visa Direct (Mandatory)   | Description
@@ -82,7 +85,7 @@ FirstName               | string    | yes   | yes       | yes           | yes   
 LastName                | string    | yes   | yes       | yes           | yes           | User last name
 CompanyName             | string    | no    | yes       | yes           | yes           | Company name, in case it's a company
 Email                   | string    | yes   | yes       | yes           | yes           | User e-mail
-PhoneNumber             | string    | no    | no       | no            | no            | Phone number (maximum 10 characters)
+PhoneNumber             | string    | no    | no       | no            | no            | Phone number (maximum 10 characters, no special characters accepted)
 **BankAccountInformation**  |       | yes   |           |               |               |
 InstitutionNumber       | string    | yes   | no        | no            | no            | Institution Number, 3 digits
 TransitNumber           | string    | yes   | no        | no            | no            | Transit Number, 5 digits
@@ -101,7 +104,7 @@ AddressState            | string    | no    | no        | yes           | no    
 
 :::caution
 - If the user will be sending funds to Zūm (pull from a card) via Via Direct transaction, ExpireMonth and ExpireYear are required
-- If the user will be receiving funds from Zūm (push from a card), ExpireMonth, ExpireYear, and CVV are optional
+- If the user will be receiving funds from Zūm (push to a card), ExpireMonth, ExpireYear, and CVV are optional
 :::
 
 **Response**
@@ -114,6 +117,8 @@ lastName | string | Last name
 companyName | string | Company name, in case it's a company
 
 ## Update user
+Use this endpoint if you want to edit the basic information for an existing user. The user id is informed in the url and the body payload contains the user information. This endpoint does not update the bank account information or the credit card information.
+
 
 ```json
 > Payload example:
@@ -137,8 +142,6 @@ companyName | string | Company name, in case it's a company
 
 `Endpoint: {{env}}/api/user/UpdateBasicInformation/{user_id}`
 
-Use this endpoint if you want to update the basic information for an existing user. The user id is informed in the url and the body payload contains the user information. This endpoint does not update the bank account information or the credit card information.
-
 **Input parameters**
 
 Parameter               | Type      | EFT (Mandatory)   | Interac (Mandatory)   | Credit Card (Mandatory)   | Visa Direct (Mandatory)   | Description
@@ -147,7 +150,7 @@ FirstName               | string    | yes   | yes       | yes           | yes   
 LastName                | string    | yes   | yes       | yes           | yes           | User last name
 CompanyName             | string    | no    | yes       | yes           | yes           | Company name, in case it's a company
 Email                   | string    | yes   | yes       | yes           | yes           | User e-mail
-PhoneNumber             | string    | no    | no       | no            | no            | Phone number (maximum 10 characters)
+PhoneNumber             | string    | no    | no        | no            | no            | Phone number (maximum 10 characters, no special characters accepted)
 
 **Response**
 
@@ -157,6 +160,7 @@ id | guid | User id
 
 
 ## Update bank account information
+Use this endpoint if you want to edit the bank account information from a user. The user id is informed in the url and the body payload contains the user information.
 
 ```json
 > Payload example:
@@ -178,8 +182,6 @@ id | guid | User id
 
 `Endpoint: {{env}}/api/user/UpdateBankAccountInformation/{user_id}`
 
-Use this endpoint if you want to update the bank account information from a user. The user id is informed in the url and the body payload contains the user information.
-
 **Input parameters**
 
 Parameter               | Type      | EFT (Mandatory)  | Description
@@ -195,6 +197,7 @@ Parameter | Type | Description
 id | guid | User id
 
 ## Update credit card information
+Use this endpoint if you want to edit the credit card information from a user. The user id is informed in the url and the body payload contains the user information.
 
 ```json
 > Payload example:
@@ -223,8 +226,6 @@ id | guid | User id
 
 `Endpoint: {{env}}/api/user/UpdateCreditCardInformation/{user_id}`
 
-Use this endpoint if you want to update the credit card information from a user. The user id is informed in the url and the body payload contains the user information.
-
 **Input parameters**
 
 Parameter               | Type      | Credit Card (Mandatory)  | Visa Direct (Mandatory)   | Description
@@ -247,6 +248,7 @@ Parameter | Type | Description
 id | guid | User id
 
 ## Update credit card billing address information
+Use this endpoint if you want to edit the credit card billing address information from a user. The user id is informed in the url and the body payload contains the address information
 
 ```json
 > Payload example:
@@ -270,8 +272,6 @@ id | guid | User id
 `Method: PATCH`
 
 `Endpoint: {{env}}/api/user/UpdateBillingAddressInformation/{user_id}`
-
-Use this endpoint if you want to update the credit card billing address information from a user. The user id is informed in the url and the body payload contains the address information.
 
 **Input parameters**
 
@@ -325,12 +325,13 @@ The boolean `sameAsBilling` informs us to use the billing address as shipping ad
 
 Parameter               | Type      | Credit Card (Mandatory)  | Visa Direct (Mandatory)   | Description
 ---------               | -------   | ----          | ----          | ----
-AddressLine1            | string    | no           | yes           | Billing address line 1
-AddressLine2            | string    | no           | yes           | Billing address line 2
-AddressPostalCode       | string    | no           | yes           | Billing address postal code
-AddressCountry          | string    | no           | yes           | Billing address country (Canada)
-AddressCity             | string    | no           | yes           | Billing address city
-AddressState            | string    | no           | yes           | Billing address state/province
+AddressLine1            | string    | no           | yes           | shipping address line 1
+AddressLine2            | string    | no           | yes           | shipping address line 2
+AddressPostalCode       | string    | no           | yes           | shipping address postal code
+AddressCountry          | string    | no           | yes           | shipping address country (Canada)
+AddressCity             | string    | no           | yes           | shipping address city
+AddressState            | string    | no           | yes           | shipping address state/province
+
 
 **Response**
 
@@ -425,7 +426,7 @@ AggregationBalance | decimal | EFT account current balance
 **CreditCardInformation**   | |
 Number                  | string    | Last for digits only
 ExpireMonth             | number    | Card expiry month, 2 digits
-ExpireYear              | number    | ard expiry year, 4 digits
+ExpireYear              | number    | Card expiry year, 4 digits
 CVV                     | string    | Security code, 3 or 4 digits
 AddressLine1            | string    | Billing address line 1
 AddressLine2            | string    | Billing address line 2
