patch - fix on typos

--- a/docs/api-specification/invoices.mdx
+++ b/docs/api-specification/invoices.mdx
@@ -155,7 +155,7 @@ Parameter               | Type          | Description
 ---------               | -------       | --------------------------------  
 Id                      | guid          | Id for the invoice
 Amount                  | decimal       | Total amount for the invoice 
-CreatedAt               | date          | Cration date for the invoice
+CreatedAt               | date          | Creation date for the invoice
 CustomerId              | guid          | Id for the related customer
 DaysToDueDate           | int           | Days until due date from the creation date
 DueDate                 | date          | Due date
@@ -356,7 +356,7 @@ Parameter               | Type          | Description
 ---------               | -------       | --------------------------------  
 Id                      | guid          | Id for the invoice
 Amount                  | decimal       | Total amount for the invoice 
-CreatedAt               | date          | Cration date for the invoice
+CreatedAt               | date          | Creation date for the invoice
 CustomerId              | guid          | Id for the related customer
 DaysToDueDate           | int           | Days until due date from the creation date
 DueDate                 | date          | Due date
@@ -503,7 +503,7 @@ Parameter               | Type          | Description
 ---------               | -------       | --------------------------------  
 Id                      | guid          | Id for the invoice
 Amount                  | decimal       | Total amount for the invoice 
-CreatedAt               | date          | Cration date for the invoice
+CreatedAt               | date          | Creation date for the invoice
 CustomerId              | guid          | Id for the related customer
 DaysToDueDate           | int           | Days until due date from the creation date
 DueDate                 | date          | Due date
@@ -644,7 +644,7 @@ TotalCount              | number        | The total rows the filter returns
 **Items**               |               | List of invoices
 Id                      | guid          | The invoice Id
 Amount                  | decimal       | Total amount for the invoice 
-CreatedAt               | date          | Cration date for the invoice
+CreatedAt               | date          | Creation date for the invoice
 DueDate                 | date          | Due date
 InvoiceStatus           | string        | Invoice status
 ProductName             | string        | Name for the product related to invoice
@@ -764,7 +764,7 @@ Parameter               | Type          | Description
 ---------               | -------       | --------------------------------  
 Id                      | guid          | Id for the invoice
 Amount                  | decimal       | Total amount for the invoice 
-CreatedAt               | date          | Cration date for the invoice
+CreatedAt               | date          | Creation date for the invoice
 CustomerId              | guid          | Id for the related customer
 DaysToDueDate           | int           | Days until due date from the creation date
 DueDate                 | date          | Due date
