--- a/docs/api-specification/subscriptions.mdx
+++ b/docs/api-specification/subscriptions.mdx
@@ -119,7 +119,7 @@ BillingDay            | int       | yes            | Billing day for monthy prod
 DueDay                | int       | yes            | Days to due date
 InvoicePaymentType    | int       | yes            | Payment Type Operator
 LastDayOfTheMonth     | boolean   | no             | Set to true if you to use the last day of the month to be used has a billing day (can be used with monthy and anual product prices)
-Memo                  | string    | no             | Memo that will be reflect on invoices and trasactions
+Memo                  | string    | no             | Memo that will be reflect on invoices and transactions
 Quantity              | int       | yes            | Desired quantity for the product
 PaymentGateways       | string[]  | yes            | Payment gateways through witch the subscription will be processed
 ProductPriceId        | guid      | yes            | Id for the product price
@@ -172,7 +172,7 @@ Parameter               | Type          | Description
 ---------               | -------       | --------------------------------  
 Id                      | guid          | Id for the subscription
 Total                   | decimal       | Total amount for the subscription 
-CreatedAt               | date          | Cration date for the subscription
+CreatedAt               | date          | Creation date for the subscription
 ProductName             | string        | Name for the product related to subscription
 SubscriptionStatus      | string        | Subscription status
 **Customer**            |               | Basic Customer data
@@ -444,7 +444,7 @@ BillingDay            | int       | yes            | Billing day for monthy prod
 DueDay                | int       | yes            | Days to due date
 InvoicePaymentType    | int       | yes            | Payment Type Operator
 LastDayOfTheMonth     | boolean   | no             | Set to true if you to use the last day of the month to be used has a billing day (can be used with monthy and anual product prices)
-Memo                  | string    | no             | Memo that will be reflect on invoices and trasactions
+Memo                  | string    | no             | Memo that will be reflect on invoices and transactions
 Quantity              | int       | yes            | Desired quantity for the product
 PaymentGateways       | string[]  | yes            | Payment gateways through witch the subscription will be processed
 ProductPriceId        | guid      | yes            | Id for the product price
@@ -463,7 +463,7 @@ Parameter               | Type          | Description
 ---------               | -------       | --------------------------------  
 Id                      | guid          | Id for the subscription
 Total                   | decimal       | Total amount for the subscription 
-CreatedAt               | date          | Cration date for the subscription
+CreatedAt               | date          | Creation date for the subscription
 ProductName             | string        | Name for the product related to subscription
 SubscriptionStatus      | string        | Subscription status
 **Customer**            |               | Basic Customer data
@@ -589,7 +589,7 @@ Parameter               | Type          | Description
 ---------               | -------       | --------------------------------  
 Id                      | guid          | Id for the subscription
 Total                   | decimal       | Total amount for the subscription 
-CreatedAt               | date          | Cration date for the subscription
+CreatedAt               | date          | Creation date for the subscription
 ProductName             | string        | Name for the product related to subscription
 SubscriptionStatus      | string        | Subscription status
 AnnuallyBillingDay      | int           |  Billing day for anual product prices (1-28)
@@ -598,7 +598,7 @@ BillingDay              | int           |  Billing day for monthy product prices
 DueDay                  | int           |  Days to due date
 InvoicePaymentType      | int           | Payment Type Operator
 LastDayOfTheMonth       | boolean       | Set to true if you to use the last day of the month to be used has a billing day (can be used with monthy and anual product prices)
-Memo                    | string        | Memo that will be reflect on invoices and trasactions
+Memo                    | string        | Memo that will be reflect on invoices and transactions
 Quantity                | int           | Desired quantity for the product
 PaymentGateways         | string[]      | Payment gateways through witch the subscription will be processed
 ProductPriceId          | guid          | Id for the product price
@@ -742,7 +742,7 @@ TotalCount              | number        | The total rows the filter returns
 **Items** | | List of subscriptions
 Id                      | guid          | Id for the subscription
 Total                   | decimal       | Total amount for the subscription 
-CreatedAt               | date          | Cration date for the subscription
+CreatedAt               | date          | Creation date for the subscription
 ProductName             | string        | Name for the product related to subscription
 SubscriptionStatus      | string        | Subscription status
 **Customer**            |               | Basic Customer data
@@ -998,7 +998,7 @@ Parameter               | Type          | Description
 ---------               | -------       | --------------------------------  
 Id                      | guid          | Id for the invoice
 Amount                  | decimal       | Total amount for the invoice 
-CreatedAt               | date          | Cration date for the invoice
+CreatedAt               | date          | Creation date for the invoice
 CustomerId              | guid          | Id for the related customer
 DaysToDueDate           | int           | Days until due date from the creation date
 DueDate                 | date          | Due date
