--- a/docs/api-specification/transactions-batch-csv.mdx
+++ b/docs/api-specification/transactions-batch-csv.mdx
@@ -1,7 +1,7 @@
 ---
 title: Transactions Batch CSV
 description:
-  How to integrate with trasactions batch api.
+  How to integrate with transactions batch api.
 ---
 
 # Transactions Batch CSV
