--- a/docs/api-specification/transactions.mdx
+++ b/docs/api-specification/transactions.mdx
@@ -1,7 +1,7 @@
 ---
 title: Transactions
 description:
-    How to integrate with trasactions api.
+    How to integrate with transactions api.
 ---
 
 # Transactions
