patch - text formating and token creation request

--- a/docs/basic-concepts/zum-wallet.mdx
+++ b/docs/basic-concepts/zum-wallet.mdx
@@ -4,12 +4,13 @@ description:
  What is Zum Wallet and how it works.
 ---
 
-Zum wallet is a virtual account which is used to facilitate money movement from either your bank account to your users’ bank account or the opposite. You can see all activity involving your Zum wallet through the portal. Every Zūm Rails account comes with one Zūm Wallet.
+Zum wallet is a virtual account which is used to facilitate money movement from either your bank account to your users’ bank account or the opposite. You can see all activity involving your Zum wallet through the portal. 
+**Every Zūm Rails account comes with one Zūm Wallet**.
 
 The goal of the Zūm Wallet is to help you manage funds. You can preload the wallet for faster disbursement or collect multiple transactions and then send one aggregate transaction to your funding source, or split the funds.
 For EFT, using the wallet is optional. For Visa Direct and Credit Cards payment methods, the funds are sent to the wallet and will settle in a merchant account at the end of the day.
 
-:::info
+:::note
 Some Zūm Rails accounts may possess more than one wallet. Shortly these will be migrated into just one wallet per account.
 If you are using the API, you will need the wallet ID to create transactions involving wallet. 
 This wallet will have a new Id, however, if you are using the API you can continue using the old wallet Ids (to create transactions, recurrent transactions and request funds). We will automatically update your wallet id to the new one when needed.
