--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -6,7 +6,7 @@ description:
 
 Zūm Rails has built an easy to use payment gateway that allows your organization to push and pull funds in the way that best suits your organization.
 
-This includes using our Zūm Connect portal to instantly capture users banking info and details using our aggregation engine. The other options are to pass through to us the existing banking details you may already have. You can also use invoices and subscriptions to collect payments and send the invoices to your users.
+This includes using our Zūm Connect portal to instantly capture users banking info and details using our **aggregation engine**. The other options are to pass through to us the existing banking details you may already have. You can also use **invoices and subscriptions** to collect payments and send the invoices to your users.
 
 No matter how you want to process payments the choice is yours, even if it is a mixture of our various solutions.
 
