--- a/docs/basic-concepts/moving-funds.mdx
+++ b/docs/basic-concepts/moving-funds.mdx
@@ -4,12 +4,12 @@ description:
   How moving funds works on Canada and Zum.
 ---
 
-Zūm Rails and its direct integration to its partners allow funds to move more quickly than anyone else in Canada with visibility over the status of each transaction. That means there is no waiting 2-3 days just to find out whether a transaction is successful.
+Zūm Rails and its direct integration to its partners allow funds to move more quickly than anyone else in Canada with visibility over the status of each transaction. That means there is **no waiting 2-3 days** just to find out whether a transaction is successful.
 
 Funds are moved between 3 stakeholders: 
 
 ![Zum Payment Methods](/img/docs/diagrams/stakeholders_v2.png)
 
-- Funding Source: This is your business bank account, to be able to start moving funds you will need to link your bank account information using Zūm Portal.
-- Zūm Wallet: This is a virtual account you can use to manage funds. If you need to move funds directly from a Funding Source to User, or the opposite, the funds will pass through Zūm Wallet automatically.
-- User: Represents the payee for accounts payable, or the payer for accounts receivable. More details can be found under the [User’s'](./api-specification/users) section.
+- **Funding Source**: This is your business bank account, to be able to start moving funds you will need to link your bank account information using Zūm Portal.
+- **Zūm Wallet**: This is a virtual account you can use to manage funds. If you need to move funds directly from a Funding Source to User, or the opposite, the funds will pass through Zūm Wallet automatically.
+- **User**: Represents the payee for accounts payable, or the payer for accounts receivable. More details can be found under the [User’s'](../api-specification/users) section.
