--- a/docs/ways-to-integrate/introduction.mdx
+++ b/docs/ways-to-integrate/introduction.mdx
@@ -6,8 +6,15 @@ description:
 
 There are various ways to integrate with Zum Rails. Check the options below to decide what fits your workflow:
 
-Full api integration: You can start using our API endpoints (check API documentation [here](../api-specification/api-introduction)) to create transactions, add users, create invoices, etc. With the API integration you have full control over the UI that your end user will see and you can develop it based on your business use cases. This is one of the most secure ways of integrating since all API requests are using the Bearer Token Authorization. A Bearer Token will last up to an hour from the time it is generated, allowing multiple API calls to be made securely without authorizing each time. Understand more about the Authorize endpoint [here](../api-specification/authentication). 
+**Full api integration**: You can start using our API endpoints (check API documentation [here](../api-specification/api-introduction)) to create transactions, add users, create invoices, etc.
+ With the API integration you have full control over the UI that your end user will see and you can develop it based on your business use cases. 
+ This is one of the most secure ways of integrating since all API requests are using the Bearer Token Authorization. 
+ A Bearer Token will last up to an hour from the time it is generated, allowing multiple API calls to be made securely without authorizing each time. 
+ Understand more about the Authorize endpoint [here](../api-specification/authentication). 
 
-Portal: You can use the portal to create transactions, add users, create invoices, etc. You can view our FAQs and also check out our video tutorials to learn more about how to start moving money using the portal. If you prefer to use the portal, you will not have to do any API integration and you can start right away through the portal.
+**Portal**: You can use the portal to create transactions, add users, create invoices, etc. 
+You can view our FAQs and also check out our video tutorials to learn more about how to start moving money using the portal. 
+If you prefer to use the portal, you will not have to do any API integration and you can start right away through the portal.
 
-Hybrid (recommended): We recommend using a mix of both APIs and the portal as it is more robust and secure to use the APIs and you can view the details of your transactions, keep track of the money being moved, download reports, etc. by leveraging the functionalities available in the Zum portal. You can use the API/SDK or host our URL within your application to add users, create transactions, send payment links to your users, etc and receive real time updates on the status of users and transactions so you can automate your next call to action depending on the status of the payments. 
+**Hybrid (recommended)**: We recommend using a mix of both APIs and the portal as it is more robust and secure to use the APIs and you can view the details of your transactions, keep track of the money being moved, download reports, etc. by leveraging 
+the functionalities available in the Zum portal. You can use the API/SDK or host our URL within your application to add users, create transactions, send payment links to your users, etc and receive real time updates on the status of users and transactions so you can automate your next call to action depending on the status of the payments. 
