patch - remove outdated content for wallets

--- a/docs/api-specification/users.mdx
+++ b/docs/api-specification/users.mdx
@@ -14,8 +14,7 @@ Zūm Rails recommends using Zūm Connect for the below reasons:
 - For EFT, it offers the end user the possibility to link his bank account, ensuring that the bank account information will be verified to avoid transaction failures.
 - For Credit Card and Visa Direct, it's required that we reduce your PCI scope.
 
-For more information about Zūm Connect, [click here](../ways-to-integrate/zum-connect):
-
+For more information about Zūm Connect, [click here](../ways-to-integrate/zum-connect).
 
 ## Creating a new user
 Use this endpoint if you want to add a new user to your account.
